# atomic-potentials

./: .clang-tidy  CMakeLists.txt  CMakePresets.json  HACKING.md  README.md  flake.nix  run.sh
cmake/: dev-mode.cmake  install-config.cmake  install-rules.cmake  variables.cmake
data/: NPT_FCC_1400K_Energy.csv
data/DFT_Cu/: coord.data  coord_direct.data  energy.data
data/poet_run/data/: README.md
data/poet_run/data/DFT_Cu/: README.md
data/poet_run/data/DFT_Cu/0K/: 100.vasp  111.vasp  221.vasp  321.vasp  331.vasp  BCC.vasp  FCC.vasp  HCP.vasp  TargetProperties_0K.data
data/poet_run/data/DFT_Cu/NPT_FCC_1400K/: 1.vasp  10.vasp  11.vasp  12.vasp  13.vasp  14.vasp  15.vasp  16.vasp  17.vasp  18.vasp  19.vasp  2.vasp  20.vasp  21.vasp  22.vasp  23.vasp  24.vasp  25.vasp  26.vasp  27.vasp  28.vasp  29.vasp  3.vasp  30.vasp  31.vasp  32.vasp  33.vasp  34.vasp  35.vasp  36.vasp  37.vasp  38.vasp  39.vasp  4.vasp  40.vasp  41.vasp  42.vasp  43.vasp  44.vasp  45.vasp  (+14 more)
data/poet_run/data/DFT_Cu/NVT_FCC_1400K/: 1.vasp  10.vasp  11.vasp  12.vasp  13.vasp  14.vasp  15.vasp  16.vasp  17.vasp  18.vasp  19.vasp  2.vasp  20.vasp  21.vasp  22.vasp  23.vasp  24.vasp  25.vasp  26.vasp  27.vasp  28.vasp  29.vasp  3.vasp  30.vasp  31.vasp  32.vasp  33.vasp  34.vasp  35.vasp  36.vasp  37.vasp  38.vasp  39.vasp  4.vasp  40.vasp  41.vasp  42.vasp  43.vasp  44.vasp  45.vasp  (+13 more)
data/poet_run/data/DFT_Cu/NVT_FCC_300K/: 1.vasp  10.vasp  11.vasp  12.vasp  13.vasp  14.vasp  15.vasp  16.vasp  17.vasp  18.vasp  19.vasp  2.vasp  20.vasp  21.vasp  22.vasp  23.vasp  24.vasp  25.vasp  26.vasp  27.vasp  28.vasp  29.vasp  3.vasp  30.vasp  31.vasp  32.vasp  33.vasp  34.vasp  35.vasp  36.vasp  37.vasp  38.vasp  39.vasp  4.vasp  40.vasp  41.vasp  42.vasp  43.vasp  44.vasp  45.vasp  (+13 more)
data/poet_run/data/DFT_Cu/lowIndexSurfaces/: 11.vasp  13.vasp  2.vasp  4.vasp  5.vasp  7.vasp  8.vasp  9.vasp  E0.data  F_Cell.data  F_coord.data  README.txt
data/poet_run/data/EAM_Cu/NVT_FCC_1600K/: 1.vasp  10.vasp  100.vasp  11.vasp  12.vasp  13.vasp  14.vasp  15.vasp  16.vasp  17.vasp  18.vasp  19.vasp  2.vasp  20.vasp  21.vasp  22.vasp  23.vasp  24.vasp  25.vasp  26.vasp  27.vasp  28.vasp  29.vasp  3.vasp  30.vasp  31.vasp  32.vasp  33.vasp  34.vasp  35.vasp  36.vasp  37.vasp  38.vasp  39.vasp  4.vasp  40.vasp  41.vasp  42.vasp  43.vasp  44.vasp  (+62 more)
data/poet_run/data/EAM_Cu/NVT_FCC_20kK/: 1.vasp  10.vasp  100.vasp  11.vasp  12.vasp  13.vasp  14.vasp  15.vasp  16.vasp  17.vasp  18.vasp  19.vasp  2.vasp  20.vasp  21.vasp  22.vasp  23.vasp  24.vasp  25.vasp  26.vasp  27.vasp  28.vasp  29.vasp  3.vasp  30.vasp  31.vasp  32.vasp  33.vasp  34.vasp  35.vasp  36.vasp  37.vasp  38.vasp  39.vasp  4.vasp  40.vasp  41.vasp  42.vasp  43.vasp  44.vasp  (+63 more)
data/poet_run/data/EAM_Cu/NVT_FCC_300K/: 1.vasp  10.vasp  100.vasp  11.vasp  12.vasp  13.vasp  14.vasp  15.vasp  16.vasp  17.vasp  18.vasp  19.vasp  2.vasp  20.vasp  21.vasp  22.vasp  23.vasp  24.vasp  25.vasp  26.vasp  27.vasp  28.vasp  29.vasp  3.vasp  30.vasp  31.vasp  32.vasp  33.vasp  34.vasp  35.vasp  36.vasp  37.vasp  38.vasp  39.vasp  4.vasp  40.vasp  41.vasp  42.vasp  43.vasp  44.vasp  (+63 more)
data/poet_run/data/EAM_Cu/NVT_FCC_3800K/: 1.vasp  10.vasp  100.vasp  11.vasp  12.vasp  13.vasp  14.vasp  15.vasp  16.vasp  17.vasp  18.vasp  19.vasp  2.vasp  20.vasp  21.vasp  22.vasp  23.vasp  24.vasp  25.vasp  26.vasp  27.vasp  28.vasp  29.vasp  3.vasp  30.vasp  31.vasp  32.vasp  33.vasp  34.vasp  35.vasp  36.vasp  37.vasp  38.vasp  39.vasp  4.vasp  40.vasp  41.vasp  42.vasp  43.vasp  44.vasp  (+62 more)
data/poet_run/data/LJ_Ar/: README.txt
data/poet_run/data/LJ_Ar/FCC/: 1.vasp  10.vasp  11.vasp  12.vasp  13.vasp  14.vasp  15.vasp  2.vasp  3.vasp  4.vasp  5.vasp  6.vasp  7.vasp  8.vasp  9.vasp  E0.data  F.data  F_Cell.data
data/poet_run/data/LJ_Ar/NVT20kK/: 1.vasp  10.vasp  11.vasp  12.vasp  13.vasp  14.vasp  15.vasp  2.vasp  3.vasp  4.vasp  5.vasp  6.vasp  7.vasp  8.vasp  9.vasp  E0.data  F.data  F_Cell.data
data/poet_run/data/LJ_Ar/liquid/: 1.vasp  10.vasp  11.vasp  12.vasp  13.vasp  14.vasp  15.vasp  2.vasp  3.vasp  4.vasp  5.vasp  6.vasp  7.vasp  8.vasp  9.vasp  E0.data  F.data  F_Cell.data
data/poet_run/data/LJ_Ar/liquidNPT100K/: 0.vasp  1.vasp  10.vasp  11.vasp  12.vasp  13.vasp  14.vasp  15.vasp  2.vasp  3.vasp  4.vasp  5.vasp  6.vasp  7.vasp  8.vasp  9.vasp  E0.data  F.data  F_Cell.data
data/poet_run/data/LJ_Ar/liquidNVT100K/: 1.vasp  10.vasp  11.vasp  12.vasp  13.vasp  14.vasp  15.vasp  2.vasp  3.vasp  4.vasp  5.vasp  6.vasp  7.vasp  8.vasp  9.vasp  E0.data  F.data  F_Cell.data
scripts/: search.py
source/: atomic.cpp  atomic.hpp  lib.cpp  lib.hpp  main.cpp  util.cpp
test/: CMakeLists.txt
test/source/: atomic-potentials_test.cpp
